{{$NEXT}}

0.000025  2016-02-02 12:08:32-08:00 America/Los_Angeles

    - Fix occasional warning in cleanup

0.000024  2016-01-29 21:16:56-08:00 America/Los_Angeles

    - Add no_context() (needed for external tool)

0.000023  2016-01-28 20:34:09-08:00 America/Los_Angeles

    - Add context_do()
    - Add context_aquire hooks
    - Documentation updates
    - Typo fixes (thanks rjbs)
    - Minor enhancement to test tools

0.000022  2016-01-18 11:58:40-08:00 America/Los_Angeles

    - Fix test that broke in the last release (oops)

0.000021  2016-01-18 10:54:54-08:00 America/Los_Angeles

    - Fix bug where default diagnostics were not shown for subtests.

0.000020  2016-01-14 21:52:43-08:00 America/Los_Angeles

    - Change how contexts are stacked
    - More/better messages when contexts are abused
    - better handling of $@, $!, and $?
    - Add pre_filter and pre_unfilter to Hubs

0.000019  2016-01-12 16:08:11-08:00 America/Los_Angeles

    - Make third-party meta-data interface consistent.

0.000018  2016-01-12 05:53:29-08:00 America/Los_Angeles

    - Better solution to the $?, $!, and $@ problem
    - error vars are stored/restored by the context

0.000017  2016-01-11 16:33:55-08:00 America/Los_Angeles

    - Fix $! squashing

0.000016  2016-01-10 11:54:57-08:00 America/Los_Angeles

    - Better encapsulation of API::Instance
    - API methods to get lists of hooks
    - Minor fixes to IPC shm logic
    - Preload event types when API is loaded
    - Added IPC acceptance tests

0.000015  2016-01-07 19:26:58-08:00 America/Los_Angeles

    - Make it possible to use a custom new() with HashBase

0.000014  2016-01-07 07:31:23-08:00 America/Los_Angeles

    - Silence a warning in older perls (warning breaks Test-Simple tests)

0.000013  2016-01-06 11:12:21-08:00 America/Los_Angeles

    - Remove diag from inside todo (separation of concerns, less TAP influence)
    - Remove internal TODO tracking (not needed, less TAP influence)